--- a/css/styles.css
+++ b/css/styles.css
@@ -660,6 +660,7 @@ info-link.link:focus {
   font-size: 36px;
   letter-spacing: 0.02em;
   color: #2E2F42;
+  line-height: 1.1;
 }
 
 .client-list {
