--- a/css/styles.css
+++ b/css/styles.css
@@ -73,7 +73,11 @@ img {
 .header {
   text-decoration: none;
   color: inherit;
-  border-bottom: 1px solid #e7e9fc
+  border-bottom: 1px solid #e7e9fc;
+  box-shadow: 0px 2px 1px rgba(46, 47, 66, 0.08),
+    0px 1px 1px rgba(46, 47, 66, 0.16),
+    0px 1px 6px rgba(46, 47, 66, 0.08);
+
 }
 
 .logo.link {
@@ -393,7 +397,7 @@ info-link.link:focus {
 }
 
 .class-one {
-  padding: 32px 16px;
+  padding: 32px 0;
   border-radius: 0px 0px 4px 4px;
 }
 
@@ -583,6 +587,9 @@ info-link.link:focus {
   background-position: center;
   margin-left: auto;
   margin-right: auto;
+  background-size: cover;
+  background-repeat: no-repeat;
+
 }
 
 /* .itom::before {
@@ -612,8 +619,6 @@ info-link.link:focus {
 
 
 
-
-
 /* iconka */
 
 .theam-iconka-cont {
@@ -629,10 +634,10 @@ info-link.link:focus {
 }
 
 .theam-iconka-link {
+  background-color: #4d5ae5;
   display: flex;
   justify-content: center;
   align-items: center;
-  background-color: #4b5ae5;
   border-radius: 50%;
   width: 40px;
   height: 40px;
@@ -641,7 +646,7 @@ info-link.link:focus {
 .theam-iconka {
   width: 16px;
   height: 16px;
-  fill: white;
+  fill: #f4f4fd;
 }
 
 
@@ -696,13 +701,14 @@ info-link.link:focus {
   font-weight: 500;
   font-size: 16px;
   line-height: 24px;
+  letter-spacing: 0.02em;
 }
 
-.link-sm {
+.link-sosial-media {
+  background-color: #4d5ae5;
   display: flex;
   justify-content: center;
   align-items: center;
-  background-color: #4b5ae5;
   border-radius: 50%;
   width: 40px;
   height: 40px;
@@ -715,13 +721,18 @@ info-link.link:focus {
 }
 
 .foot-nav {
-  align-items: center;
   display: flex;
   align-items: baseline;
+
 }
 
 .social-nav {
   margin-left: 120px;
+  margin-right: 120px;
+}
+
+.iconka-sm {
+  fill: #f4f4fd
 }
 
 /* footer portfolio */
