--- a/css/styles.css
+++ b/css/styles.css
@@ -480,12 +480,16 @@ info-link.link:focus {
 
 }
 
+
 /* portfolio */
 .filter-button:hover {
   background-color: #404bbf;
   color: var(--white-background);
   text-decoration: none;
   border: 1px solid transparent;
+  box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1),
+    0px 2px 1px rgba(0, 0, 0, 0.08),
+    0px 2px 2px rgba(0, 0, 0, 0.12);
 }
 
 .filter-button:focus {
@@ -493,6 +497,9 @@ info-link.link:focus {
   color: var(--white-background);
   text-decoration: none;
   border: 1px solid transparent;
+  box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1),
+    0px 2px 1px rgba(0, 0, 0, 0.08),
+    0px 2px 2px rgba(0, 0, 0, 0.12);
 }
 
 .portfolio-type {
