--- a/css/styles.css
+++ b/css/styles.css
@@ -502,6 +502,13 @@ info-link.link:focus {
     0px 2px 2px rgba(0, 0, 0, 0.12);
 }
 
+.portfolio-link.link:hover,
+.portfolio-link.link:focus {
+  box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08),
+    0px 1px 1px rgba(46, 47, 66, 0.16),
+    0px 2px 1px rgba(46, 47, 66, 0.08);
+}
+
 .portfolio-type {
   font-style: normal;
   font-weight: 500;
