--- a/css/styles.css
+++ b/css/styles.css
@@ -595,7 +595,7 @@ info-link.link:focus {
 
 /* hw4 */
 .hero {
-  background-image: linear-gradient(rgba(46, 47, 66, 0.7), rgba(46, 47, 66, 0.7)), url(../images/price/people-office\ 1.jpg);
+  background-image: linear-gradient(rgba(46, 47, 66, 0.7), rgba(46, 47, 66, 0.7)), url(../images/price/people.jpg);
   max-width: 1440px;
   height: 600px;
   background-position: center;
@@ -749,11 +749,7 @@ info-link.link:focus {
 .foot-nav {
   display: flex;
   align-items: baseline;
-}
-
-.social-nav {
-  margin-left: 120px;
-  margin-right: 120px;
+  gap: 120px;
 }
 
 .iconka-sm {
