--- a/css/styles.css
+++ b/css/styles.css
@@ -751,7 +751,7 @@ info-link.link:focus {
 .foot-nav {
   display: flex;
   align-items: baseline;
-  gap: 120px;
+  margin-right: 120px;
 }
 
 .iconka-sm {
