--- a/css/styles.css
+++ b/css/styles.css
@@ -754,6 +754,10 @@ info-link.link:focus {
   margin-right: 120px;
 }
 
+.footer-one {
+  margin-right: 120px;
+}
+
 .iconka-sm {
   fill: #f4f4fd
 }
