--- a/css/styles.css
+++ b/css/styles.css
@@ -761,3 +761,85 @@ info-link.link:focus {
 .iconka-sm {
   fill: #f4f4fd
 }
+
+/* hw5 */
+.nav-link {
+  position: relative;
+}
+
+.nav-link::after {
+  content: '';
+  position: absolute;
+  display: block;
+  width: 100%;
+  height: 4px;
+  border-radius: 2px;
+  bottom: 0;
+  left: 0;
+}
+
+.nav-link.current {
+  color: #404BBF;
+}
+
+/* .nav-link:hover::after,
+.nav-link:focus::after { */
+.nav-link.current::after {
+  background-color: #404BBF;
+}
+
+/* portfolio  */
+.paragraf-portfolio {
+  width: 360px;
+  height: 300px;
+  background-color: #4D5AE5;
+  color: #F4F4FD;
+  text-align: center;
+  position: absolute;
+  top: 0;
+  left: 0;
+}
+
+.portfolio-block {
+  position: relative;
+}
+
+/* < !-- modal window --> */
+
+.backdrop {
+  position: fixed;
+  top: 0;
+  left: 0;
+  background: rgba(46, 47, 66, 0.4);
+  width: 100%;
+  height: 100%;
+  opacity: 0, 5;
+}
+
+.modal {
+  position: absolute;
+  width: 408px;
+  height: 584px;
+  left: 50%;
+  top: 50%;
+  transform: translate(-50%, -50%);
+  border-radius: 4px;
+  background-color: #FCFCFC;
+  box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 2px 1px rgba(0, 0, 0, 0.2);
+  padding: 24px;
+}
+
+.modal-btn {
+  display: block;
+  margin-left: auto;
+
+  width: 24px;
+  height: 24px;
+  background: #E7E9FC;
+  border: 1px solid rgba(0, 0, 0, 0.1);
+  border-radius: 50%;
+  border: none;
+  cursor: pointer;
+}
+
+.modal-icon {}
