--- a/css/styles.css
+++ b/css/styles.css
@@ -11,6 +11,7 @@
   --hero-background: #2e2f42;
   --white-background: #ffffff;
   --modal-background: #fcfcfc;
+  transform: var(--anim-standart);
 }
 
 
@@ -143,6 +144,7 @@ img {
   display: block;
   padding-top: 24px;
   padding-bottom: 24px;
+  transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .nav-link.link:hover,
@@ -789,15 +791,42 @@ info-link.link:focus {
 }
 
 /* portfolio  */
-.paragraf-portfolio {
-  width: 360px;
-  height: 300px;
-  background-color: #4D5AE5;
-  color: #F4F4FD;
-  text-align: center;
+
+.flex-portfolio:hover .overlay {
+  transform: translateY(0);
+}
+
+.portfolio-block {
+  overflow: hidden;
+}
+
+.overlay {
   position: absolute;
   top: 0;
   left: 0;
+  transform: translateY(100%);
+  transition: transform var(--anim-standart);
+  width: 100%;
+  height: 100%;
+  background-color: #4D5AE5;
+  display: flex;
+}
+
+.paragraf-overlay {
+  text-align: center;
+  color: #F4F4FD;
+  padding-right: 32px;
+  padding-left: 32px;
+  padding-top: 40px;
+  padding-bottom: 164px;
+
+  font-family: 'Roboto';
+  font-style: normal;
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 24px;
+  letter-spacing: 0.02em;
+
 }
 
 .portfolio-block {
@@ -813,7 +842,13 @@ info-link.link:focus {
   background: rgba(46, 47, 66, 0.4);
   width: 100%;
   height: 100%;
-  opacity: 0, 5;
+}
+
+.is-hidden {
+  opacity: 0;
+  visibility: hidden;
+  pointer-events: none;
+
 }
 
 .modal {
