--- a/css/styles.css
+++ b/css/styles.css
@@ -854,10 +854,12 @@ info-link.link:focus {
 .modal {
   position: absolute;
   width: 408px;
-  height: 584px;
+  min-height: 584px;
   left: 50%;
   top: 50%;
-  transform: translate(-50%, -50%);
+  transform: translate(-50%, -50%) scale(1) rotate(360deg);
+  transition: transform var(--transition-duration) cubic-bezier(0.4, 0, 0.2, 1),
+    opacity var(--transition-duration) cubic-bezier(0.4, 0, 0.2, 1);
   border-radius: 4px;
   background-color: #FCFCFC;
   box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 2px 1px rgba(0, 0, 0, 0.2);
